# marker-math-md

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  main.py  marker_readme.md  old_codex.toml  pdf2md_best_plus.py  prompt.md  pyproject.toml  txt.txt
markdown/: Eksamen_2016.md  Eksamen_2016_meta.json  Eksamen_2017.md  Eksamen_2017_meta.json  Eksamen_2018.md  Eksamen_2018_meta.json  Eksamen_2019.md  Eksamen_2019_meta.json  Eksamen_2021.md  Eksamen_2021_meta.json  LF_Eksamen_2017.md  LF_Eksamen_2017_meta.json  LF_Eksamen_2018.md  LF_Eksamen_2018_meta.json  LF_Eksamen_2019.md  LF_Eksamen_2019_meta.json  LF_Eksamen_2020.md  LF_Eksamen_2020_meta.json  LF_Eksamen_2021.md  LF_Eksamen_2021_meta.json  LF_Eksamen_2022.md  LF_Eksamen_2022_meta.json  LF_Eksamen_2023.md  LF_Eksamen_2023_meta.json  LF_Eksamen_2024.md  LF_Eksamen_2024_meta.json  LF_eksamen_2016.md  LF_eksamen_des_2016.md  LF_eksamen_des_2016_meta.json
marker_llm_papers/: LANGUAGE_MODELS_ARE_INJECTIVE_AND_HENCE_INVERTIBLE.md  LANGUAGE_MODELS_ARE_INJECTIVE_AND_HENCE_INVERTIBLE_meta.json
marker_opti_papers/: alonso-mora-et-al-2017-on-demand-high-capacity-ride-sharing-via-dynamic-trip-vehicle-assignment .md  alonso-mora-et-al-2017-on-demand-high-capacity-ride-sharing-via-dynamic-trip-vehicle-assignment _meta.json  chiwei_ssrn-3258234_meta.json
opti_papers/: 00Oversikt eksamensoppgaver per tema_2016-2024.md  00Oversikt eksamensoppgaver per tema_2016-2024_meta.json  Joint_Optimization_of_Pricing_Dispatching_and_Repositioning_in_Ride-Hailing_With_Multiple_Models_Interplayed_Reinforcement_Learning.md  (+3 more)
(+6 files in other folders)
