[project]
name = "pdf-converter-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marker-pdf>=1.10.1",
    "openai>=1.109.1",
    "psutil>=7.1.2",
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["pyright>=1.1.407"]

[project.scripts]
pdf-converter-watch = "pdf_converter.cli:main"
